public/Frontend/styles/product.css
/* ... */
.nopadding
{
    padding: 0px !important;
}
.button
{
    width: 178px;
    height: 61px;
    background: none;
    text-align: center;
    border: solid 2px #1b1b1b;
    overflow: hidden;
    cursor: pointer;
}
.button a
{
    display: block;
    position: relative;
    font-size: 16px;
    font-weight: 600;
    line-height: 57px;
    color: #1b1b1b;
    background: none;
    z-index: 1;
    -webkit-transition: all 200ms ease;
    -moz-transition: all 200ms ease;
    -ms-transition: all 200ms ease;
    -o-transition: all 200ms ease;
    transition: all 200ms ease;
}
.button::after
{
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 150%;
    height: 100%;
    background: #FFFFFF;
    z-index: 0;
    opacity: 0;
    -webkit-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0);
    transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0);
    -webkit-transform-origin: 0% 100%;
    transform-origin: 0% 100%;
    -webkit-transition: -webkit-transform 0.3s, opacity 0.3s, background-color 0.3s;
    transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
}
.button:hover::after
{
    opacity: 1;
    -webkit-transform: rotate3d(0, 0, 1, 0deg);
    transform: rotate3d(0, 0, 1, 0deg);
    -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
    transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
}
.button_light
{
    border: solid 2px #FFFFFF;
}
.button_light a
{
    color: #FFFFFF;
}
.button:hover a
{
    color: #FFFFFF;
}
.button_light:hover a
{
    color: #1b1b1b;
}

/*********************************
3. Header
*********************************/

.header
{
    display: block;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 100;
}
.header_container
{
    width: 100%;
    z-index: 1;
    background: #FFFFFF;
}
.header_content
{
    width: 100%;
    height: 130px;
    -webkit-transition: all 200ms ease;
    -moz-transition: all 200ms ease;
    -ms-transition: all 200ms ease;
    -o-transition: all 200ms ease;
    transition: all 200ms ease;
}
.header.scrolled .header_content
{
    height: 70px;
}
.logo a
{
    font-size: 30px;
    font-weight: 700;
    color: #1b1b1b;
    -webkit-transition: all 200ms ease;
    -moz-transition: all 200ms ease;
    -ms-transition: all 200ms ease;
    -o-transition: all 200ms ease;
    transition: all 200ms ease;
}
.header.scrolled .logo a .img
{
    font-size: 24px;
    height:70px;
}
.main_nav
{
    margin-left: 156px;
}
.main_nav > ul > li
{
    display: inline-block;
    position: relative;
}
.main_nav > ul > li:not(:last-child)
{
    margin-right: 46px;
}
.main_nav > ul > li > a
{
    font-size: 16px;
    font-weight: 600;
    color: #767676;
    -webkit-transition: all 200ms ease;
    -moz-transition: all 200ms ease;
    -ms-transition: all 200ms ease;
    -o-transition: all 200ms ease;
    transition: all 200ms ease;
}
.main_nav > ul > li > a:hover,
.main_nav > ul > li.active > a
{
    color: #1b1b1b;
}
.main_nav ul li.hassubs::after
{
    position: absolute;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%);
    left: calc(100% + 3px);
    font-family: 'FontAwesome';
    font-size: 10px;
    content: '\f078';
    color: #767676;
}
.main_nav ul li:hover::after,
.main_nav ul li.active::after
{
    color: #1b1b1b;
}
.hassubs ul
{
    position: absolute;
    right: -15px;
    top: calc(100% + 20px);
    text-align: right;
    background: #FFFFFF;
    padding-right: 25px;
    padding-left: 35px;
    padding-top: 25px;
    padding-bottom: 25px;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: all 200ms ease;
    -moz-transition: all 200ms ease;
    -ms-transition: all 200ms ease;
    -o-transition: all 200ms ease;
    transition: all 200ms ease;
}
.hassubs:hover ul
{
    width:200px;
    visibility: visible;
    opacity: 1;
    top: calc(100% + 0px);
}
.hassubs ul li:not(:last-child)
{
    margin-bottom: 11px;
}
.hassubs ul li a
{
    font-size: 14px;
    font-weight: 600;
    color: #767676;
    -webkit-transition: all 200ms ease;
    -moz-transition: all 200ms ease;
    -ms-transition: all 200ms ease;
    -o-transition: all 200ms ease;
    transition: all 200ms ease;
}
.hassubs ul li a:hover
{
    color: #1b1b1b;
}
.header_extra
{

}
.shopping_cart
{
    display: inline-block;
}
.shopping_cart a svg
{
    display: inline-block;
    width: 20px;
    height: 20px;
    vertical-align: middle;
    -webkit-transition: all 200ms ease;
    -moz-transition: all 200ms ease;
    -ms-transition: all 200ms ease;
    -o-transition: all 200ms ease;
    transition: all 200ms ease;
}
.shopping_cart a:hover svg,
.shopping_cart a:hover div
{
    fill: #e95a5a;
    color: #e95a5a;
}
.shopping_cart a div
{
    display: inline-block;
    vertical-align: middle;
    font-size: 14px;
    font-weight: 500;
    color: #1b1b1b;
    margin-left: 13px;
    -webkit-transition: all 200ms ease;
    -moz-transition: all 200ms ease;
    -ms-transition: all 200ms ease;
    -o-transition: all 200ms ease;
    transition: all 200ms ease;
}
.shopping_cart a div span
{
    margin-left: 4px;
}
.search
{
    display: inline-block;
    margin-left: 51px;
    cursor: pointer;
    vertical-align: sub;
    -webkit-transform: translateY(-1px);
    -moz-transform: translateY(-1px);
    -ms-transform: translateY(-1px);
    -o-transform: translateY(-1px);
    transform: translateY(-1px);
}
.search_icon
{
    width: 13px;
    height: 13px;
}
.search_icon svg
{
    -webkit-transition: all 200ms ease;
    -moz-transition: all 200ms ease;
    -ms-transition: all 200ms ease;
    -o-transition: all 200ms ease;
    transition: all 200ms ease;
}
.search_icon:hover svg
{
    fill: #e95a5a;
}
/* ... */

